[gd_scene load_steps=3 format=3 uid="uid://8j3058wsybat"]

[ext_resource type="Script" path="res://Project52A.gd" id="1_ima3l"]

[sub_resource type="LabelSettings" id="LabelSettings_gp4yq"]
font_size = 24

[node name="Project52A" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ima3l")

[node name="Label1" type="Label" parent="."]
layout_mode = 1
offset_left = 2.0
offset_right = 273.0
offset_bottom = 131.0
text = "Length:"
label_settings = SubResource("LabelSettings_gp4yq")
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.39892
anchor_right = 0.235243
anchor_bottom = 0.60108
grow_vertical = 2
text = "Width:"
label_settings = SubResource("LabelSettings_gp4yq")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LabelOut" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -77.0
offset_right = 151.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_gp4yq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonCalculate" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -125.0
offset_right = 323.0
grow_vertical = 0
text = "Calculate"

[node name="ButtonClear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.5
offset_top = -125.0
offset_right = 161.5
grow_horizontal = 2
grow_vertical = 0
text = "Clear"

[node name="ButtonQuit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -323.0
offset_top = -125.0
grow_horizontal = 0
grow_vertical = 0
text = "Exit"

[node name="TextLength" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 129.0
offset_top = -647.0
offset_right = 345.0
offset_bottom = -519.0
grow_vertical = 0

[node name="TextWidth" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 130.0
offset_top = -68.0
offset_right = -806.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ButtonCalculate" to="." method="_on_button_calculate_pressed"]
[connection signal="pressed" from="ButtonClear" to="." method="_on_button_clear_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
